articles/-/mc/axo/server/1.21.3/source.md
<p hidden meta>
Title: 1.21.3 Server Update
Author: @TheAxolot77
AuthorTitle: Author/Owner
Banner: banner.png
Favicon: favicon.png
CardBackground: banner.png
Tags: news,changelog,minecraft,mc,axo,server
CreationDate: 2024-12-01
UpdatedDate: 2024-12-01
</p>

**After much work and frustration the server is finally up again, phew! 💩**
<br><br>

## Hosting
Given my previous hosting provider caused a lot of recurring dataloss and had generally slow support times, I have finally switched hosting provider.<br>
The server is now generously hosted by @PigiBlossom!
<br><br>
**Because of this the ip and port numbers have changed, please refer to the discord for the new adress!**
<br><br>

## ServerSide
**Version Change**
- I haven't had time to update my clients for 1.21.3, until then you may use any other 1.21.3 client or add [ViaFabric](https://modrinth.com/mod/viafabric) or [ViaFabricPlus](https://modrinth.com/mod/viafabricplus) to your modpacks.<br>
<br>

**Mod Changes**
- Replaced `AntiEntityGrief` with `MobExplosionGriefingGamerule`.<br>
- Skipped `DisconnectPacketFix` since it is not updated.<br>
- Skipped `Horsebuff` since it is not updated.<br>
- Skipped `LeashMod` since it is not updated.<br>
- Also skipped some other maintenance mods for the same reason.<br>
- Replaced `Fsit` with `!Sit` mod, since it was broken, this sadly means no sitting on players for now :(<br>
- Replaced `SnowballKB` with my mod `KBSnowballs`.<br>
- Added `BsBluemap` mod by me.<br>

**Datapack / Resourcepack Changes**
- Forked MoreArmorTrims to work with 1.21.3, sadly no emmissives for now...<br>
  Also armorsets using the custom trims might now render correctly until re-trimmed, will decide on a solution in the future resourcepack re-make.
<br><br>

## What next?
- Fixing any missing features.
- Making 1.21.3 clients.
- 1.21.4 Will change how items work in resourcepacks so I am planning on re-making the server resourcepack from the ground up.
- Also some more stability testing and work!
