articles/-/mc/axo/server/1.21.4/source.md
<p hidden meta>
Title: 1.21.4 Server Update
Author: @TheAxolot77
AuthorTitle: Author/Owner
Banner: banner.png
Favicon: favicon.png
CardBackground: banner.png
Tags: news,changelog,minecraft,mc,axo,server
CreationDate: 2024-12-19
UpdatedDate: 2024-12-19
</p>

**After much work and frustration the server is finally up again, phew! 💩**
<br><br>

## Hosting
Given my previous hosting provider caused a lot of recurring dataloss and had generally slow support times, I have finally switched hosting provider.<br>
The server is now generously hosted by @PigiBlossom!
<br><br>
**Because of this, the ip and port numbers have changed, please refer to the discord for the new adress!**
<br><br>

## ServerSide
**Version Change**
- I haven't had time to update my clients for 1.21.4, until then you may use any other 1.21.4 client or add [ViaFabric](https://modrinth.com/mod/viafabric) or [ViaFabricPlus](https://modrinth.com/mod/viafabricplus) to your modpacks.<br>
*(I will update this article once they are released)*<br>
<br>

**Mod Changes**
- Skipped `FishNoStuck` since it is not updated.<br>
- Skipped `Hurricane` since it is not updated.<br>
- Skipped `DisconnectPacketFix` since it is not updated.<br>
- Skipped `Horsebuff` since it is not updated.<br>
- Skipped `LeashMod` since it is not updated.<br>
- Also skipped some other maintenance mods for the same reason.<br>
- The `Fsit` mod is back, *(removed in 1.21.3)* so everything should work as usual now with that.<br>
- Replaced `SnowballKB` with my mod `KBSnowballs`.<br>
- Added `BsBluemap` mod by me.<br>
<br>

**Datapack / Resourcepack Changes**
- Still using the MoreArmorTrims fork from 1.21.3, sadly still no emmissives for now...<br>
  Also armorsets using the custom trims might not render correctly until re-trimmed, will decide on a solution in the future resourcepack re-make.<br>
<br>

**Datapack / Resourcepack Issues**
- The server resourcepack has some of issues.<br>
<br><br>

## What next?
- Fixing any missing features.
- Making 1.21.4 clients.
- 1.21.4 Have changed how items work in resourcepacks so I am planning on re-making the server resourcepack from the ground up.
- Also some more stability testing and work!
- Might add the [Vivecraft](https://modrinth.com/mod/vivecraft) mod.
